# aegis

./: .gitignore  CONTRIBUTING.md  CONTRIBUTION.md  LICENSE.txt  README.md  aegis_results.db  exfiltration_results.json  my_playbook.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
aegis/: __main__.py  cli.py
aegis/core/: analyzer.py  connectors.py  library.py  models.py  plugins.py  prompt_generator.py  prompt_manager.py  reporting.py
aegis/core/database/: manager.py
aegis/core/evaluators/: base.py  code_security.py  pii.py  secrets.py
aegis/prompts/: bias_harmful_content.json  code_generation_exploits.json  data_exfiltration.json  direct_prompt_injection.json  indirect_prompt_injection.json  jailbreaking_roleplaying.json  misinformation_deception.json  privacy_confidentiality.json  prompt_library.json
aegis/tests/: test_analyzer.py  test_gemini_connector.py  test_library.py
aegis/web_interface/: Aegis Home.py  Aegis.py  app.py
aegis/web_interface/pages/: 1_Security_Dashboard.py
sentr/: __main__.py  cli.py
sentr/agents/: tester.py
sentr/core/: analyzer.py  connectors.py  models.py  plugins.py  prompt_generator.py  prompt_manager.py  reporting.py
sentr/core/database/: manager.py
sentr/core/evaluators/: base.py  code_security.py  pii.py  secrets.py
sentr/prompts/: prompt_library.json
sentr/web_interface/: Sentr.py
sentr/web_interface/pages/: 1_Security_Dashboard.py
tests/: test_agent_tester.py  test_analyzer.py  test_code_security_evaluator.py  test_gemini_connector.py  test_library.py  test_local_model_connector.py  test_prompt_generator.py  test_prompt_manager.py
tests/reports/: jailbreak_report.csv
vorak/: __main__.py  cli.py
vorak/agents/: tester.py
vorak/core/: analyzer.py  comparison.py  connectors.py  governance.py  models.py  plugins.py  prompt_generator.py  prompt_manager.py  reporting.py
vorak/core/database/: manager.py
vorak/core/evaluators/: agent_reasoning.py  base.py  code_security.py  pii.py  sandbox.py  secrets.py
vorak/prompts/: advanced_prompts.json  prompt_library.json
vorak/web_interface/: Home.py  launcher.py
vorak/web_interface/pages/: 1_Security_Dashboard.py  2_Compare_Sessions.py
