# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vorak"
version = "1.0.4"
authors = [
  { name = "Ruchir Kulkarni", email = "ruchirkulkarni22@gmail.com" },
]
description = "Vulnerability Oriented Red-teaming for AI Knowledge"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "typer",
    "rich",
    "plotly",
    "pandas",
    "google-generativeai",
    "openai",
    "anthropic",
    "python-dotenv",
    "requests",
    "fpdf2",
    "streamlit",
    "kaleido",
    "bandit",
    "nlpaug",
    "textattack",
    "seaborn",
    "pyyaml"
]

# --- NEW: Optional dependencies for local model support ---
[project.optional-dependencies]
local = [
    "transformers",
    "torch"
]

[project.urls]
"Homepage" = "https://github.com/ruchirk22/vorak"
"Bug Tracker" = "https://github.com/ruchirk22/vorak/issues"

[project.scripts]
vorak = "vorak.cli:app"

[tool.setuptools.package-data]
"vorak.prompts" = ["*.json"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vorak*"]
exclude = ["tests*", "models*"]